# mp-image-tool-esp32

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  mp-image-tool-esp32  mp-image-tool-esp32.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yaml  ci-release.yaml  ci-tests.yaml  ci.yaml  publish.yaml  tests.yaml
mp_image_tool_esp32/: image_device.py  image_file.py  main.py  partition_table.py
src/mp_image_tool_esp32/: __init__.py  argparse_typed.py  argtypes.py  common.py  data_table.py  espdeviceio.py  esptool_io.py  esptool_ops.py  firmware.py  firmware_file.py  firmware_fileio.py  image_device.py  image_file.py  image_header.py  layouts.py  lfs.py  logger.py  main.py  ota_update.py  parse_args.py  partition_table.py  progress_bar.py  types.py
tests/: README.md  conftest.py  run-python-version-tests.sh  run-tests.sh  test-outputs.yaml  test_firmware.py  test_fs.py  test_outputs.yaml
typings/esptool/: README.md  __init__.py  __init__.pyi  cmds.pyi  util.pyi
typings/littlefs/: __init__.pyi
